# live-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml
src/: lib.rs  log.rs  main.rs  server.rs  watcher.rs
src/file_layer/: watcher.rs
src/http_layer/: listener.rs  mod.rs  server.rs  template.rs
src/scripts/: websocket.html  websocket.js
src/templates/: error.html  index.html  reload.js  websocket.html  websocket.js
src/utils/: mod.rs
tests/: browser.rs  end-to-end.rs  test.rs
tests/empty_index/: not_index.html
tests/page/: index.html
