[package]
name = "live-server"
version = "0.10.1"
edition = "2024"
authors = ["Lomirus"]
description = "Launch a local network server with live reload feature for static pages."
homepage = "https://github.com/lomirus/live-server"
repository = "https://github.com/lomirus/live-server"
license = "MIT"
keywords = ["live", "server", "web", "reload"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "8.2.0"
clap = { version = "4.5.41", features = ["derive"] }
local-ip-address = "0.6.5"
log = "0.4.27"
env_logger = "0.10.2"
notify-debouncer-full = "0.5.0"
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.7.6", features = ["ws"]}
futures = "0.3.31"
mime_guess = "2.0.5"
open = "5.3.2"
ignore = "0.4.23"
path-absolutize = "3.1.1"

[dev-dependencies]
reqwest = "0.12.4"
