[package]
name = "live-server"
version = "0.11.0"
edition = "2024"
authors = ["Lomirus"]
description = "Launch a local network server with live reload feature for static pages."
homepage = "https://github.com/lomirus/live-server"
repository = "https://github.com/lomirus/live-server"
license = "MIT"
keywords = ["live", "server", "web", "reload"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "*"
clap = { version = "*", features = ["derive"] }
local-ip-address = "*"
log = "*"
env_logger = "*"
notify-debouncer-full = "*"
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["ws"]}
futures = "*"
mime_guess = "*"
open = "*"
ignore = "*"
path-absolutize = "*"

[dev-dependencies]
reqwest = "*"
