[package]
name = "live-server"
version = "0.11.0"
edition = "2024"
authors = ["Lomirus"]
description = "Launch a local network server with live reload feature for static pages."
homepage = "https://github.com/lomirus/live-server"
repository = "https://github.com/lomirus/live-server"
license = "MIT"
keywords = ["live", "server", "web", "reload"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "8.2.0"
clap = { version = "4.5.54", features = ["derive"] }
local-ip-address = "0.6.10"
log = "0.4.29"
env_logger = "0.10.2"
notify-debouncer-full = "0.7.0"
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"]}
futures = "0.3.31"
mime_guess = "2.0.5"
open = "5.3.3"
ignore = "0.4.25"
path-absolutize = "3.1.1"

[dev-dependencies]
chromiumoxide = "0.8.0"
get-port = "4.0.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
tempfile = "3.24.0"
serial_test = "3.2.0"
